# knowledgebase-builder

./: .gitignore  CLAUDE.md  SPEC.md  VISION.md  config.example.yaml  pyproject.toml  requirements.txt  run.bat
docs/development/: ARCHITECTURE.md  ROADMAP.md  TESTING.md
seed/general-media/: capture_rules.yaml  stopwords.txt
src/: config.py  exiftool.py  health.py  privacy.py
src/api/: __init__.py  deps.py  kb.py  knowledge.py  pipeline.py  review.py  sources.py  ui.py  vocabulary.py
src/cli/: __init__.py  aesthetic.py  corpus.py  entity.py  face.py  geolocate.py  kb.py  pipeline.py  quality.py  quick.py  review.py  source.py  voice.py
src/db/: corpus.py  kb.py  migrations.py  registry.py  utils.py
src/geo/: loader.py  resolver.py
src/llm/: session.py
src/media/: audiotrack.py  frameset.py
src/pipeline/: cancel.py  clusters.py  dag.py  embeddings.py  filter_spec.py  knowledge_gates.py  progress.py  stage_runner.py
src/stages/: aesthetic.py  analyse.py  attribute_speakers.py  classify.py  classify_rules.py  describe.py  entity_match.py  export.py  extract_fields.py  extract_meta.py  face.py  face_meta.py  field_registry.py  geo_meta.py  geolocate.py  gps_cluster.py  (+16 more)
templates/: base.html  capture_rules.html  corpus_files.html  corpus_stats.html  face_review.html  health.html  kb_new.html  location_registry.html  locations.html  new_terms_review.html  normalise_review.html  pattern_rules.html  people_registry.html  pipeline.html  prompt_library.html  review_base.html  speaker_review.html  suggest_review.html  vocabulary.html
tests/: conftest.py
(+246 files in other folders)
