[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kb-builder"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "typer>=0.12.0",
    "pyyaml>=6.0.2",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "imagehash>=2.3.0",
]

[project.scripts]
enrich = "src.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "pillow>=10.4.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"src.migrations" = ["**/*.sql"]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["F"]

[tool.pytest.ini_options]
testpaths = ["tests"]
